# Mprpc

./: CMakeLists.txt  README.md  auto1.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callerfriendservice.cc  calleruserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  rpcprovider11.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  rpcheader.pb.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
